# Card-Business-Gui

./: CLAUDE.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/: CardUploaderAutoUpload.css  CardUploaderAutoUpload.tsx  FulfillmentManager.css  FulfillmentManager.tsx  InventoryManager.css  InventoryManager.tsx  LabelMaker.css  LabelMaker.tsx  SchemaPickerModal.css  SchemaPickerModal.tsx  Sidebar.css  Sidebar.tsx
